[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databar"
version = "2.1.0"
description = "Official Databar.ai Python SDK and CLI — connect to enrichments, waterfalls, and tables via api.databar.ai"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Databar.ai Team", email = "info@databar.ai" }]
keywords = ["databar", "enrichment", "data", "api", "cli", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
databar = "databar.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://databar.ai"
Documentation = "https://docs.databar.ai"
Repository = "https://github.com/databar-ai/databar-python"
"Bug Tracker" = "https://github.com/databar-ai/databar-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/databar"]
omit = ["src/databar/cli/*"]
